Fixed values text nowrap issues

--- a/src/Responses.css
+++ b/src/Responses.css
@@ -1,15 +1,10 @@
 /* Increase the width of the container */
 .responses-container {
-    width: 90%;
-    /* Increase width */
-    max-width: 1200px;
-    /* Set a max width */
-    margin: 20px auto;
+    width: 100%;
     background: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    max-height: 500px;
     overflow-y: auto;
 }
 
